parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> IDENTIFIER EQUALS expression SEMICOLON
Rule 5     statement -> PRINT expression SEMICOLON
Rule 6     statement -> IF expression LBRACE statements RBRACE
Rule 7     statement -> IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 8     statement -> WHILE expression LBRACE statements RBRACE
Rule 9     statement -> FOR IDENTIFIER EQUALS expression SEMICOLON expression SEMICOLON IDENTIFIER EQUALS expression LBRACE statements RBRACE
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression MULTIPLY expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression AND expression
Rule 15    expression -> expression OR expression
Rule 16    expression -> expression EQUAL expression
Rule 17    expression -> expression NOTEQUAL expression
Rule 18    expression -> expression LESS expression
Rule 19    expression -> expression GREATER expression
Rule 20    expression -> expression LESSEQUAL expression
Rule 21    expression -> expression GREATEREQUAL expression
Rule 22    expression -> NOT expression
Rule 23    expression -> NUMBER
Rule 24    expression -> STRING
Rule 25    expression -> TRUE
Rule 26    expression -> FALSE
Rule 27    expression -> IDENTIFIER
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> MINUS expression

Terminals, with rules where they appear

AND                  : 14
COMMA                : 
DIVIDE               : 13
ELSE                 : 7
EQUAL                : 16
EQUALS               : 4 9 9
FALSE                : 26
FOR                  : 9
GREATER              : 19
GREATEREQUAL         : 21
IDENTIFIER           : 4 9 9 27
IF                   : 6 7
LBRACE               : 6 7 7 8 9
LESS                 : 18
LESSEQUAL            : 20
LPAREN               : 28
MINUS                : 11 29
MULTIPLY             : 12
NOT                  : 22
NOTEQUAL             : 17
NUMBER               : 23
OR                   : 15
PLUS                 : 10
PRINT                : 5
RBRACE               : 6 7 7 8 9
RPAREN               : 28
SEMICOLON            : 4 5 9 9
STRING               : 24
TRUE                 : 25
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 7 8 9 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 28 29
program              : 0
statement            : 2 3
statements           : 1 2 6 7 7 8 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . IDENTIFIER EQUALS expression SEMICOLON
    (5) statement -> . PRINT expression SEMICOLON
    (6) statement -> . IF expression LBRACE statements RBRACE
    (7) statement -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (8) statement -> . WHILE expression LBRACE statements RBRACE
    (9) statement -> . FOR IDENTIFIER EQUALS expression SEMICOLON expression SEMICOLON IDENTIFIER EQUALS expression LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . IDENTIFIER EQUALS expression SEMICOLON
    (5) statement -> . PRINT expression SEMICOLON
    (6) statement -> . IF expression LBRACE statements RBRACE
    (7) statement -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (8) statement -> . WHILE expression LBRACE statements RBRACE
    (9) statement -> . FOR IDENTIFIER EQUALS expression SEMICOLON expression SEMICOLON IDENTIFIER EQUALS expression LBRACE statements RBRACE

    $end            reduce using rule 1 (program -> statements .)
    IDENTIFIER      shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8

    statement                      shift and go to state 9

state 3

    (3) statements -> statement .

    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> IDENTIFIER . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 10


state 5

    (5) statement -> PRINT . expression SEMICOLON
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 11

state 6

    (6) statement -> IF . expression LBRACE statements RBRACE
    (7) statement -> IF . expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 20

state 7

    (8) statement -> WHILE . expression LBRACE statements RBRACE
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 21

state 8

    (9) statement -> FOR . IDENTIFIER EQUALS expression SEMICOLON expression SEMICOLON IDENTIFIER EQUALS expression LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 22


state 9

    (2) statements -> statements statement .

    IDENTIFIER      reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 10

    (4) statement -> IDENTIFIER EQUALS . expression SEMICOLON
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 23

state 11

    (5) statement -> PRINT expression . SEMICOLON
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATER expression
    (20) expression -> expression . LESSEQUAL expression
    (21) expression -> expression . GREATEREQUAL expression

    SEMICOLON       shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    EQUAL           shift and go to state 31
    NOTEQUAL        shift and go to state 32
    LESS            shift and go to state 33
    GREATER         shift and go to state 34
    LESSEQUAL       shift and go to state 35
    GREATEREQUAL    shift and go to state 36


state 12

    (29) expression -> MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 37

state 13

    (22) expression -> NOT . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 38

state 14

    (23) expression -> NUMBER .

    SEMICOLON       reduce using rule 23 (expression -> NUMBER .)
    PLUS            reduce using rule 23 (expression -> NUMBER .)
    MINUS           reduce using rule 23 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 23 (expression -> NUMBER .)
    DIVIDE          reduce using rule 23 (expression -> NUMBER .)
    AND             reduce using rule 23 (expression -> NUMBER .)
    OR              reduce using rule 23 (expression -> NUMBER .)
    EQUAL           reduce using rule 23 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 23 (expression -> NUMBER .)
    LESS            reduce using rule 23 (expression -> NUMBER .)
    GREATER         reduce using rule 23 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 23 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 23 (expression -> NUMBER .)
    LBRACE          reduce using rule 23 (expression -> NUMBER .)
    RPAREN          reduce using rule 23 (expression -> NUMBER .)


state 15

    (24) expression -> STRING .

    SEMICOLON       reduce using rule 24 (expression -> STRING .)
    PLUS            reduce using rule 24 (expression -> STRING .)
    MINUS           reduce using rule 24 (expression -> STRING .)
    MULTIPLY        reduce using rule 24 (expression -> STRING .)
    DIVIDE          reduce using rule 24 (expression -> STRING .)
    AND             reduce using rule 24 (expression -> STRING .)
    OR              reduce using rule 24 (expression -> STRING .)
    EQUAL           reduce using rule 24 (expression -> STRING .)
    NOTEQUAL        reduce using rule 24 (expression -> STRING .)
    LESS            reduce using rule 24 (expression -> STRING .)
    GREATER         reduce using rule 24 (expression -> STRING .)
    LESSEQUAL       reduce using rule 24 (expression -> STRING .)
    GREATEREQUAL    reduce using rule 24 (expression -> STRING .)
    LBRACE          reduce using rule 24 (expression -> STRING .)
    RPAREN          reduce using rule 24 (expression -> STRING .)


state 16

    (25) expression -> TRUE .

    SEMICOLON       reduce using rule 25 (expression -> TRUE .)
    PLUS            reduce using rule 25 (expression -> TRUE .)
    MINUS           reduce using rule 25 (expression -> TRUE .)
    MULTIPLY        reduce using rule 25 (expression -> TRUE .)
    DIVIDE          reduce using rule 25 (expression -> TRUE .)
    AND             reduce using rule 25 (expression -> TRUE .)
    OR              reduce using rule 25 (expression -> TRUE .)
    EQUAL           reduce using rule 25 (expression -> TRUE .)
    NOTEQUAL        reduce using rule 25 (expression -> TRUE .)
    LESS            reduce using rule 25 (expression -> TRUE .)
    GREATER         reduce using rule 25 (expression -> TRUE .)
    LESSEQUAL       reduce using rule 25 (expression -> TRUE .)
    GREATEREQUAL    reduce using rule 25 (expression -> TRUE .)
    LBRACE          reduce using rule 25 (expression -> TRUE .)
    RPAREN          reduce using rule 25 (expression -> TRUE .)


state 17

    (26) expression -> FALSE .

    SEMICOLON       reduce using rule 26 (expression -> FALSE .)
    PLUS            reduce using rule 26 (expression -> FALSE .)
    MINUS           reduce using rule 26 (expression -> FALSE .)
    MULTIPLY        reduce using rule 26 (expression -> FALSE .)
    DIVIDE          reduce using rule 26 (expression -> FALSE .)
    AND             reduce using rule 26 (expression -> FALSE .)
    OR              reduce using rule 26 (expression -> FALSE .)
    EQUAL           reduce using rule 26 (expression -> FALSE .)
    NOTEQUAL        reduce using rule 26 (expression -> FALSE .)
    LESS            reduce using rule 26 (expression -> FALSE .)
    GREATER         reduce using rule 26 (expression -> FALSE .)
    LESSEQUAL       reduce using rule 26 (expression -> FALSE .)
    GREATEREQUAL    reduce using rule 26 (expression -> FALSE .)
    LBRACE          reduce using rule 26 (expression -> FALSE .)
    RPAREN          reduce using rule 26 (expression -> FALSE .)


state 18

    (27) expression -> IDENTIFIER .

    SEMICOLON       reduce using rule 27 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 27 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 27 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 27 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 27 (expression -> IDENTIFIER .)
    AND             reduce using rule 27 (expression -> IDENTIFIER .)
    OR              reduce using rule 27 (expression -> IDENTIFIER .)
    EQUAL           reduce using rule 27 (expression -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 27 (expression -> IDENTIFIER .)
    LESS            reduce using rule 27 (expression -> IDENTIFIER .)
    GREATER         reduce using rule 27 (expression -> IDENTIFIER .)
    LESSEQUAL       reduce using rule 27 (expression -> IDENTIFIER .)
    GREATEREQUAL    reduce using rule 27 (expression -> IDENTIFIER .)
    LBRACE          reduce using rule 27 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 27 (expression -> IDENTIFIER .)


state 19

    (28) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER expression
    (20) expression -> . expression LESSEQUAL expression
    (21) expression -> . expression GREATEREQUAL expression
    (22) expression -> . NOT expression
    (23) expression -> . NUMBER
    (24) expression -> . STRING
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . IDENTIFIER
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression

    NOT             shift and go to state 13
    NUMBER          shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    IDENTIFIER      shift and go to state 18
    LPAREN          shift and go to state 19
    MINUS           shift and go to state 12

    expression                     shift and go to state 39

state 20

    (6) statement -> IF expression . LBRACE statements RBRACE
    (7) statement -> IF expression . LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATER expression
    (20) expression -> expression . LESSEQUAL expression
    (21) expression -> expression . GREATEREQUAL expression

    LBRACE          shift and go to state 40
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    EQUAL           shift and go to state 31
    NOTEQUAL        shift and go to state 32
    LESS            shift and go to state 33
    GREATER         shift and go to state 34
    LESSEQUAL       shift and go to state 35
    GREATEREQUAL    shift and go to state 36


state 21

    (8) statement -> WHILE expression . LBRACE statements RBRACE
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATER expression
    (20) expression -> expression . LESSEQUAL expression
    (21) expression -> expression . GREATEREQUAL expression

    LBRACE          shift and go to state 41
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    EQUAL           shift and go to state 31
    NOTEQUAL        shift and go to state 32
    LESS            shift and go to state 33
    GREATER         shift and go to state 34
    LESSEQUAL       shift and go to state 35
    GREATEREQUAL    shift and go to state 36


state 22

    (9) statement -> FOR IDENTIFIER . EQUALS expression SEMICOLON expression SEMICOLON IDENTIFIER EQUALS expression LBRACE statements RBRACE

    EQUALS          shift and go to state 42


state 23

    (4) statement -> IDENTIFIER EQUALS expression . SEMICOLON
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATER expression
    (20) expression -> expression . LESSEQUAL expression
    (21) expression -> expression . GREATEREQUAL expression
